--- a/index.html
+++ b/index.html
@@ -43,21 +43,65 @@
             <h2 class="subtitle">¿Qué ofrecemos?</h2>
             <div class="about__function">
                 <article class="function__icons">
-                    <h3 class="function_title">Run with Pencil</h3>
+                    <h2 class="title">Run with Pencil</h2>
                     <p class="function__paragraph">Puedes disfrutar de como realizas la actividad de ejercitarte mientras corres, a la vez podrás formar figuras mediante uso del GPS y al término de la sesión podrás acceder al registro de actividad física.</p>
                 </article>
                 <article class="function__icons">
-                    <h3>Kinetic Points</h3>
-                    <p class="function__paragraph">Podrás solicitar tus medicamentos y recibirlos
-                        en la puerta de tu casa gracias a nuestro servicio de delivery.</p>
+                    <h2 class="title">Kinetic Points</h2>
+                    <p class="function__paragraph">Son puntos dentro de la aplicación los cuales se ganaran según las sesiones de running registradas(cada 50m. equivale a un  Kinetic Point). A la vez se podra acceder a promociones de consumo enfocadas en los  Kinetic Points.</p>
                 </article>
                 <article class="function__icons">
-                    <h3>Run without Pencil</h3>
+                    <h2 class="title">Run without Pencil</h2>
                     <p class="function__paragraph">Puedes disfrutar de como realizas la actividad de ejercitarte mientras corres y al término de la sesión podrás acceder al registro de actividad física.</p>
                 </article>
             </div>
         </section>
+        <h2><br></h2>
     </main>
+
+    <main class="planes">
+        <section class="container planes" id="planes">
+            <h2 class="subtitle">Planes</h2>
+            <div class="about__planes">
+                <article class="cuadro_planes">
+                    <h2 class="planes_title">Free</h2>
+                    <h3 class="planes_title">US$ 0.00 por mes</h3>
+                    <p class="function__paragraph"><em>Beneficios: <br>
+                        - Al finalizar el recorrido, podrá utilizar la opción “Share” para compartir una imagen del mapa con la figura formada en las cuentas de redes sociales que tenga asociadas
+                        (en este momento soporta Facebook, Twitter, WhatsApp e Instagram). <br>
+                        - La información del recorrido quedará registrada por 24 horas, luego de lo cual se elimina, quedando solo los valores de distancia recorrida y tiempo de sesión.</em></p>
+                    <a href="#" class="cta">Empieza aquí</a>
+                </article>
+
+                <article class="cuadro_planes">
+                    <h2 class="planes_title">Plus</h2>
+                    <h3 class="planes_title">US$ 4.99 por mes <br> o <br> US$ 4.99 si se paga anual</h3>
+
+                    <p class="function__paragraph"><em>Beneficios: <br>
+                        - Permite todo lo del plan Free. <br>
+                        - Mantener los mapas de recorrido de sesiones.<br>
+                        - Incluye la opción “Save Draft”, para guardar una sesión de recorrido y continuarla luego.<br>
+                        - Registrar los datos de recorrido automáticamente en cuentas afiliadas
+                        del usuario para las aplicaciones Apple Health, Google Fit, Strava o Nike+.</em></p>
+                    <a href="#" class="cta">Empieza aquí</a>
+                </article>
+
+                <article class="cuadro_planes">
+                    <h2 class="planes_title">Bussiness</h2>
+                    <h3 class="planes_title">US$ 49.99 por mes <br> o <br> US$ 41.99 si se paga anual</h3>
+                    <p class="function__paragraph"><em>Beneficios:<br>
+                        - Se brinda la aplicación RunningArtists Bussiness app. <br>
+                        - Pueden ofrecer promociones de consumo dirigidas a los Runners, basadas en Kinetic Points, las cuales son visibles para los usuarios runners en la opción “Offers” de su aplicación. <br>
+                        - Pueden plantear retos de figuras que los runners deben formar con su recorrido, de forma individual o vía la opción “Team Running Session” (dicha opción solo está disponible para los usuarios runners del plan Plus).</em></p>
+                    <a href="#" class="cta">Empieza aquí</a>
+                </article>
+
+            </div>
+        </section>
+        <h2><br></h2>
+    </main>
+
+
 </body>
 
 </html>
