--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <p class="function__paragraph"><em>Beneficios: <br>
                         - Al finalizar el recorrido, podrá utilizar la opción “Share” para compartir una imagen del mapa con la figura formada en las cuentas de redes sociales que tenga asociadas
                         (en este momento soporta Facebook, Twitter, WhatsApp e Instagram). <br>
-                        - La información del recorrido quedará registrada por 24 horas, luego de lo cual se elimina, quedando solo los valores de distancia recorrida y tiempo de sesión.</em></p>
+                        - La información del recorrido quedará registrada por 24 horas, luego de lo cual se elimina, quedando solo los valores de distancia recorrida y tiempo de sesión.<BR><BR><BR><BR><BR><BR></em></p>
                     <a href="#" class="cta">Empieza aquí</a>
                 </article>
 
@@ -82,7 +82,7 @@
                         - Mantener los mapas de recorrido de sesiones.<br>
                         - Incluye la opción “Save Draft”, para guardar una sesión de recorrido y continuarla luego.<br>
                         - Registrar los datos de recorrido automáticamente en cuentas afiliadas
-                        del usuario para las aplicaciones Apple Health, Google Fit, Strava o Nike+.</em></p>
+                        del usuario para las aplicaciones Apple Health, Google Fit, Strava o Nike+.<BR><BR><BR><BR><BR><BR></em></p>
                     <a href="#" class="cta">Empieza aquí</a>
                 </article>
 
@@ -101,6 +101,53 @@
         <h2><br></h2>
     </main>
 
+    <main class="marcas">
+        <section class="container marcas" id="marcas">
+            <h2 class="subtitle">Marcas Afiliadas</h2>
+            <h4 class="hero__parrafo">Estas son algunas de las marcas afilidas que cuenta con el plan bussiness</h4>
+            <div class="about__planes">
+                <article class="cuadro_planes">
+                    <h2 class="planes_title">Marathon</h2>
+                    <img src="public/assets/img/marathon.jpg" width="250">
+                </article>
+
+                <article class="cuadro_planes">
+                    <h2 class="planes_title">Adidas</h2>
+                    <img src="public/assets/img/adidas.png" width="200">
+                </article>
+
+                <article class="cuadro_planes">
+                    <h2 class="planes_title">Lima Organica</h2>
+                    <img src="public/assets/img/lima.jpeg" width="200">
+                </article>
+                <article class="cuadro_planes">
+                    <h2 class="planes_title">Nike</h2>
+                    <img src="public/assets/img/nike.jpg" width="250">
+                </article>
+            </div>
+            <br>
+            <br>
+        </section>
+    </main>
+
+    <div class="sect-marg barfooter">
+        <div class="container footer text-white">
+            <a><img class="img-logo"></a>
+            <div class="terms-pol">
+                <a class="footlink">Running Artist</a>
+                <a class="footlink">·</a>
+                <a class="footlink">CONTACTENOS</a>
+                <a class="footlink">·</a>
+                <a class="footlink">POLITICAS DE PRIVACIDAD</a>
+                <a class="footlink">·</a>
+                <a class="footlink">JEREMY ALCALA OCXAS</a>
+            </div>
+            <div class="media">
+                <a><img class="social-icon" src="./public/assets/img/facebook.svg" alt="Facebook"></a>
+                <a><img class="social-icon" src="./public/assets/img/instagrama.svg" alt="Instagram"></a>
+            </div>
+        </div>
+    </div>
 
 </body>
 
