ExamenFinal_Alcala VF

--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Running Artist</title>
     <meta charset="UTF-8">
-    <title>BabelFarma</title>
     <meta name= "author" content="EF_Jeremy Alcala">
     <meta name = "description" content="Running Artist Official Landing Page">
     <meta name = "keyword" content="Sports, Art, Running Artist">
